stok out complete
